--- a/source/_posts/2020-04-26-Socket编程.md
+++ b/source/_posts/2020-04-26-Socket编程.md
@@ -77,6 +77,40 @@ date: 2020-04-26 18:55:26
                    (((uint32)(A) & 0x000000ff) << 24))
 ```
 
+## IP地址怎么存入int里面
 
+ 输入
 
-## 
+```
+10.0.3.193
+167969729
+```
+
+输出
+
+```
+167773121
+10.3.3.193
+```
+
+```c
+#include<iostream>
+#include<stack>
+#include<string>
+using namespace std;
+
+int main()
+{
+unsigned int a,b,c,d;
+char ch;
+while(cin>>a>>ch>>b>>ch>>c>>ch>>d)
+    {
+    cout<<((a<<24)|(b<<16)|(c<<8)|d)<<endl;
+    cin>>a;
+    cout<<((a&0xff000000)>>24)<<"."<<((a & 0x00ff0000)>>16)<<"."<<((a&0x0000ff00)>>8)<<"."<<(a & 0x000000ff)<<endl;
+    }
+return 0;
+
+}
+```
+
