--- a/source/_posts/2020-04-26-C++输入输出.md
+++ b/source/_posts/2020-04-26-C++输入输出.md
@@ -35,11 +35,11 @@ date: 2020-04-26 22:31:42
 在理解 cin 功能时，不得不提标准输入缓冲区。当我们从键盘输入字符串的时候需要敲一下回车键才能够将这个字符串送入到缓冲区中，那么敲入的这个回车键（\r）会被转换为一个换行符（\n），这个换行符也会被存储在 cin 的缓冲区中并且被当成一个字符来计算！比如我们在键盘上敲下了 123456 这个字符串，然后敲一下回车键（\r）将这个字符串送入了缓冲区中，那么此时缓冲区中的字节个数是 7 ，而不是 6。
 cin 读取数据也是从缓冲区中获取数据，缓冲区为空时，cin 的成员函数会阻塞等待数据的到来，一旦缓冲区中有数据，就触发 cin 的成员函数去读取数据。
 
-使用 cin 从标准输入读取数据时，通常用到的方法有 cin>>、cin.get()，cin.getline()
+使用 cin 从标准输入读取数据时，通常用到的方法有 cin>>、cin.get()，getline(cin,str)
 
-当 cin>> 从缓冲区中读取数据时，若缓冲区中第一个字符是空格、tab或换行这些分隔符时，cin>> 会将其忽略并清除，继续读取下一个字符，若缓冲区为空，则继续等待。
+**当 cin>> 从缓冲区中读取数据时，若缓冲区中第一个字符是空格、tab或换行这些分隔符时，cin>> 会将其忽略并清除，继续读取下一个字符，若缓冲区为空，则继续等待。**
 
-但是如果读取成功，字符后面的分隔符是残留在缓冲区的，cin>> 不做处理。
+**但是如果读取成功，字符后面的分隔符是残留在缓冲区的，cin>> 不做处理。**
 
 ```c
 #include <string> 
@@ -127,11 +127,6 @@ int main(){
 }
 ```
 
-链接：https://ac.nowcoder.com/acm/contest/320/G
-来源：牛客网
-
-
-
 题目描述
 
 计算一系列数的和
@@ -198,3 +193,219 @@ int main()
 vs_installer.exe右键->属性->兼容性->勾选禁用视觉主题，勾选禁用桌面元素
 
 ![image-20200427113950251](https://i.loli.net/2020/04/27/RJeslzhK8IZTtCD.png)
+
+
+
+
+
+ 
+
+## 对输入的字符串进行排序后输出
+
+输入描述:
+
+```
+输入有两行，第一行n
+
+第二行是n个空格隔开的字符串
+5
+c d a bb e
+```
+
+输出描述:
+
+```
+输出一行排序后的字符串，空格隔开，无结尾空格
+a bb c d e
+```
+
+
+
+```c
+#include <iostream>
+#include <string>
+#include <algorithm>
+using namespace std;
+int main()
+{
+    int num = 0;
+    vector<string> str;
+    cin >> num;
+    int nn = num;
+    while(num--)
+    {
+        string temp;
+        cin >> temp;
+        str.push_back(temp);
+    }
+    sort(str.begin(),str.end());
+   for(int i = 0;i < nn; i++)
+    {
+       if(i<nn-1) 
+           cout<<str[i]<<" ";
+       else cout<<str[i];       
+    }
+    
+}
+```
+
+链接：https://ac.nowcoder.com/acm/contest/320/I
+来源：牛客网
+
+
+
+## 题目描述
+
+对输入的字符串进行排序后输出
+
+## 输入描述:
+
+```
+多个测试用例，每个测试用例一行。
+
+每行通过空格隔开，有n个字符，n＜100
+a c bb
+f dddd
+nowcoder
+```
+
+## 输出描述:
+
+```
+对于每组测试用例，输出一行排序过的字符串，每个字符串通过空格隔开
+a bb c
+dddd f
+nowcoder
+```
+
+```c
+#include <iostream>
+#include <string>
+#include <algorithm>
+using namespace std;
+int main()
+{
+    int num = 0;
+    vector<string> str;
+    
+    int nn = num;
+    string temp;
+    while(cin >> temp)
+    {
+        str.push_back(temp);
+        if(cin.get() == '\n')
+        {
+            sort(str.begin(),str.end());
+            for(int i=0;i<str.size()-1;i++)
+                cout<<str[i]<<" ";
+            cout<<str[str.size()-1]<<endl;   //保持输出格式，这里要注意
+            str.clear();            
+        }
+            
+    }
+    
+}
+```
+
+## find函数
+
+```c
+find(_In_z_ const _Elem* const _Ptr, const size_type _Off = 0)
+```
+
+        for (int j=0;j<TIMES;j++)
+        {
+            getline(cin, OPERATOR_STYLE);
+            int IDX;
+            if (OPERATOR_STYLE.find("PUSH") != OPERATOR_STYLE.npos)
+            {
+                IDX = OPERATOR_STYLE.find(" ");
+                int x = stoi(OPERATOR_STYLE.substr(IDX + 1));
+                q1.push(x);
+    
+            }
+## substring函数
+
+```c
+string substr (size_t pos = 0, size_t len = npos) const;
+```
+左闭右开区间[0,2)
+
+1sapce1
+
+out: 1space
+
+## SplitString
+
+```
+void SplitString(const string &s, vector<string> &v, const string &c)
+{
+ 
+    string::size_type pos1, pos2;
+    pos2 = s.find(c);
+    pos1 = 0;
+    while (string::npos != pos2)
+    {
+        v.push_back(s.substr(pos1, pos2 - pos1));
+        pos1 = pos2 + c.size();
+        pos2 = s.find(c, pos1);
+    }
+    if (pos1 != s.length())
+        v.push_back(s.substr(pos1));
+}
+```
+ 
+
+## 对输入的字符串进行排序后输出
+
+输入描述:
+多个测试用例，每个测试用例一行。
+每行通过,隔开，有n个字符，n＜100
+
+```
+a,c,bb
+f,dddd
+nowcoder
+```
+
+输出描述:
+对于每组用例输出一行排序后的字符串，用','隔开，无结尾空格
+
+```
+a,bb,c
+dddd,f
+nowcoder
+```
+
+```c
+#include <iostream>
+#include <string>
+#include <algorithm>
+using namespace std;
+int main()
+{
+    int num = 0;
+    vector<string> str;
+    string temp;
+    while(getline(cin,temp))
+    {
+        int index1 = 0;
+        int index2 = temp.find(',');        
+        while(index2 != string::npos)
+        {
+            str.push_back(temp.substr(index1,index2-index1));
+            index1 = index2 + 1;
+            index2 = temp.find(',',index1);
+        }
+        if (index1 != temp.length())
+            str.push_back(temp.substr(index1));        
+        sort(str.begin(),str.end());
+        for(int i=0;i<str.size()-1;i++)
+            cout<<str[i]<<",";
+        cout<<str[str.size()-1]<<endl;   //保持输出格式，这里要注意
+        str.clear(); 
+    }
+    
+}
+```
+
