--- a/source/_posts/2020-04-28-BP神经网络.md
+++ b/source/_posts/2020-04-28-BP神经网络.md
@@ -9,7 +9,7 @@ date: 2020-04-28 07:40:15
 mathjax: true
 ---
 
-这篇文章记述了关于BP神经网络的知识点。
+这篇文章记述了关于神经网络前向传播、后向传播的知识点。[本文抄自](https://loopvoid.github.io/2019/09/14/BP%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C%E5%8E%9F%E7%90%86%E5%92%8C%E7%AE%80%E6%98%8E%E7%90%86%E8%A7%A3/)
 
 <!--more-->
 
@@ -66,7 +66,7 @@ S函数的导数的图像：
 
 ![image-20200428100943916](https://i.loli.net/2020/04/28/8IbLjxq4yT7shwW.png)
 
-- **正向传播**：输入$i_1$，$i_2$数据，然后一层一层传播下去，知道输出层输出结果。
+- **正向传播**：输入$i_1$，$i_2$数据，然后一层一层传播下去，直到输出层输出结果。
 - **反向传播**：输入、期望的输出为已知。在开始时，权重$$w$$,偏置$b$初始化为随机值，按网络计算后观察结果。根据结果的**误差**(也叫损失)，调整权重$w$,偏置$b$，这时就完成了一次反向传播。
 - 当完成了一次正反向传播，也就完成了一次神经网络的训练迭代，反复迭代，误差越来越小，直至训练完成。
 
@@ -78,7 +78,7 @@ S函数的导数的图像：
 
 输出：$O_1=0.01,O_2=0.99,(训练时的输出期望值)$
 
-权重：$ \begin{aligned} &amp;w_1=0.1,w_2=0.2,w_3=0.3,w_4=0.4 \\\\ &amp;w_5=0.5,w_6=0.6,w_7=0.7,w_8=0.8 \\\\ &amp;(这些权重是随机初始化的，通过多次迭代训练调整直到训练完成)\end{aligned} $
+权重：$ \begin{aligned} &w_1=0.1,w_2=0.2,w_3=0.3,w_4=0.4 \\\\ &w_5=0.5,w_6=0.6,w_7=0.7,w_8=0.8 \\\\ &(这些权重是随机初始化的，通过多次迭代训练调整直到训练完成)\end{aligned} $
 
 偏置：$b_1=0.55,b_2=0.56,b_3=0.66,b_4=0.67 \\\\ (同随机初始化)$
 
