--- a/source/_posts/2019-09-07-Linux.md
+++ b/source/_posts/2019-09-07-Linux.md
@@ -287,3 +287,29 @@ Yes, /home/liam/test/say_yes.sh is running!
 
 可见：**使用 `fork()` 函数可以创建子进程；使用 `fork()` 函数以及 `exec` 函数则可以在子进程里执行新的任务**。
 
+### 硬连接与软连接
+
+当我们需要在不同的目录，用到相同的文件时，我们不需要在每一个需要的目录下都放一个必须相同的文件，我们只要在某个固定的目录，放上该文件，然后在 其它的目录下用ln命令链接（link）它就可以，不必重复的占用磁盘空间。
+
+为解决文件的共享使用，Linux 系统引入了两种链接：硬链接 (hard link) 与软链接（又称符号链接，即 soft link 或 symbolic link）。若一个 inode 号对应多个文件名，则称这些文件为硬链接。换言之，硬链接就是同一个文件使用了多个别名。
+
+由于硬链接是有着相同 inode 号仅文件名不同的文件，因此硬链接存在以下几点特性：
+
+- 文件有相同的 inode 及 data block；
+- 只能对已存在的文件进行创建；
+- 不能交叉文件系统进行硬链接的创建；
+- 不能对目录进行创建，只可对文件创建；
+- 删除一个硬链接文件并不影响其他有相同 inode 号的文件。
+
+软链接与硬链接不同，若文件用户数据块中存放的内容是另一文件的路径名的指向，则该文件就是软连接。软链接就是一个普通文件，只是数据块内容有点特殊。软链接有着自己的 inode 号以及用户数据块（见下图）。因此软链接的创建与使用没有类似硬链接的诸多限制：
+
+- 软链接有自己的文件属性及权限等；
+- 可对不存在的文件或目录创建软链接；
+- 软链接可交叉文件系统；
+- 软链接可对文件或目录创建；
+- 创建软链接时，链接计数 i_nlink 不会增加；
+- 删除软链接并不影响被指向的文件，但若被指向的原文件被删除，则相关软连接被称为死链接（即 dangling link，若被指向路径文件被重新创建，死链接可恢复为正常的软链接）。
+
+<img src="https://i.loli.net/2019/09/10/jlnP3kGIQwpg6dm.png" style="zoom:150%;" />
+
+形象比喻：软件总是喜欢加一个中间层来解决问题，硬件喜欢直来直去
