--- a/source/_posts/2020-03-21-TCP_IP.md
+++ b/source/_posts/2020-03-21-TCP_IP.md
@@ -23,24 +23,6 @@ tags:
 
 ![image-20200403110519731](https://i.loli.net/2020/04/03/qOBXQYjWLgJhE2b.png)
 
-## 慢系统调用阻塞状态下来了个信号（Vital）
-
-select函数、accept函数等都是慢系统调用函数，就是它得等系统网络IO准备好了才能执行，没有准备好就进入阻塞状态下，如果这个时候来了一个信号（因为我们知道信号是模仿的中断的嘛），当执行完信号处理函数返回后，PC指针就会跑到select函数的下一条指令去执行去了。。。。。。这不完蛋了吗：我等待的事件还没来呢我就被信号处理函数给跳过去了。
-
-所以我们需要在select函数的返回值上做文章，如果select函数失败会返回-1，如果是去执行信号处理函数去了，error = EINTR
-
-## 非阻塞编程
-
-让服务器不会阻塞在send，accept等函数之上，防止有人恶意攻击
-
-![image-20200322111836020](https://i.loli.net/2020/03/30/4txL8PY9qgjCdbJ.png)
-
-![image-20200322112447217](https://i.loli.net/2020/03/30/JuRfAcSBvnHa1qr.png)
-
-![image-20200322112833866](https://i.loli.net/2020/03/30/fHRLFJg8sGY6t4b.png)
-
-![image-20200322113420519](https://i.loli.net/2020/03/30/M1fJEvI9H56tsWQ.png)
-
 ## IP头格式
 
 ![1576646164341](https://i.loli.net/2020/03/30/TyvP24FAzuBcQ9g.png)
@@ -157,10 +139,36 @@ TCP进行断开连接的目标是：回收资源、终止数据传输。由于TC
 # Reactor
 
 最最原始的网络编程思路就是服务器用一个while循环，不断监听端口是否有新的套接字连接，如果有，那么就调用一个处理函数处理，类似：
-while(true){
-socket = accept();
-handle(socket)
+
+```c
+while(true)
+{
+    socket = accept();
+    handle(socket)
 }
+```
+
+这种方法的最大问题是无法并发，效率太低，如果当前的请求没有处理完，那么后面的请求只能被阻塞，服务器的吞吐量太低。
+之后，想到了使用多线程，也就是很经典的connection per thread，每一个连接用一个线程处理，类似：
+
+```c
+while(true)
+{
+    socket = accept();
+    new thread(socket);
+}
+```
+
+tomcat服务器的早期版本确实是这样实现的。多线程的方式确实一定程度上极大地提高了服务器的吞吐量，因为之前的请求在read阻塞以后，不会影响到后续的请求，因为他们在不同的线程中。这也是为什么通常会讲“一个线程只能对应一个socket”的原因。最开始对这句话很不理解，线程中创建多个socket不行吗？语法上确实可以，但是实际上没有用，每一个socket都是阻塞的，所以在一个线程里只能处理一个socket，就算accept了多个也没用，前一个socket被阻塞了，后面的是无法被执行到的。
+缺点在于资源要求太高，系统中创建线程是需要比较高的系统资源的，如果连接数太高，系统无法承受，而且，线程的反复创建-销毁也需要代价。
+线程池本身可以缓解线程创建-销毁的代价，这样优化确实会好很多，不过还是存在一些问题的，就是线程的粒度太大。每一个线程把一次交互的事情全部做了，包括读取和返回，甚至连接，表面上似乎连接不在线程里，但是如果线程不够，有了新的连接，也无法得到处理，所以，目前的方案线程里可以看成要做三件事，连接，读取和写入。
+线程同步的粒度太大了，限制了吞吐量。应该把一次连接的操作分为更细的粒度或者过程，这些更细的粒度是更小的线程。整个线程池的数目会翻倍，但是线程更简单，任务更加单一。这其实就是Reactor出现的原因，**在Reactor中，这些被拆分的小线程或者子过程对应的是handler，每一种handler会出处理一种event。这里会有一个全局的管理者selector，我们需要把channel注册感兴趣的事件，那么这个selector就会不断在channel上检测是否有该类型的事件发生，如果没有，那么主线程就会被阻塞，否则就会调用相应的事件处理函数即handler来处理。**典型的事件有连接，读取和写入，当然我们就需要为这些事件分别提供处理器，每一个处理器可以采用线程的方式实现。一个连接来了，显示被读取线程或者handler处理了，然后再执行写入，那么之前的读取就可以被后面的请求复用，吞吐量就提高了。
+
+tomcat服务器的早期版本确实是这样实现的。多线程的方式确实一定程度上极大地提高了服务器的吞吐量，因为之前的请求在read阻塞以后，不会影响到后续的请求，因为他们在不同的线程中。这也是为什么通常会讲“一个线程只能对应一个socket”的原因。最开始对这句话很不理解，线程中创建多个socket不行吗？语法上确实可以，但是实际上没有用，每一个socket都是阻塞的，所以在一个线程里只能处理一个socket，就算accept了多个也没用，前一个socket被阻塞了，后面的是无法被执行到的。
+缺点在于资源要求太高，系统中创建线程是需要比较高的系统资源的，如果连接数太高，系统无法承受，而且，线程的反复创建-销毁也需要代价。
+线程池本身可以缓解线程创建-销毁的代价，这样优化确实会好很多，不过还是存在一些问题的，就是线程的粒度太大。每一个线程把一次交互的事情全部做了，包括读取和返回，甚至连接，表面上似乎连接不在线程里，但是如果线程不够，有了新的连接，也无法得到处理，所以，目前的方案线程里可以看成要做三件事，连接，读取和写入。
+线程同步的粒度太大了，限制了吞吐量。应该把一次连接的操作分为更细的粒度或者过程，这些更细的粒度是更小的线程。整个线程池的数目会翻倍，但是线程更简单，任务更加单一。这其实就是Reactor出现的原因，**在Reactor中，这些被拆分的小线程或者子过程对应的是handler，每一种handler会出处理一种event。这里会有一个全局的管理者selector，我们需要把channel注册感兴趣的事件，那么这个selector就会不断在channel上检测是否有该类型的事件发生，如果没有，那么主线程就会被阻塞，否则就会调用相应的事件处理函数即handler来处理。**典型的事件有连接，读取和写入，当然我们就需要为这些事件分别提供处理器，每一个处理器可以采用线程的方式实现。一个连接来了，显示被读取线程或者handler处理了，然后再执行写入，那么之前的读取就可以被后面的请求复用，吞吐量就提高了。
+
 这种方法的最大问题是无法并发，效率太低，如果当前的请求没有处理完，那么后面的请求只能被阻塞，服务器的吞吐量太低。
 之后，想到了使用多线程，也就是很经典的connection per thread，每一个连接用一个线程处理，类似：
 while(true){
@@ -185,3 +193,25 @@ server导致阻塞的原因：
 2、线程从socket inputstream读入数据，会进入阻塞状态，直到全部数据读完。
 
 3、线程向socket outputstream写入数据，会阻塞直到全部数据写完。
+
+
+
+
+
+使用同步IO模型（以epoll_wait为例）实现的 Reactor 模式的工作流程为：
+
+1、主线程往 epoll 内核事件表中注册 socket 上的读就绪事件；
+
+2、主线程调用 epoll_wait 等待 socket 上有数据可读；
+
+3、当 socket 上有数据可读时，epoll_wait 通知主线程。主线程则将socket 可读事件放入请求队列中；
+
+4、睡眠在请求队列上的某个工作线程被唤醒，它从 socket 读取数据，并处理客户请求，然后往 epoll 内核事件表中注册该 socket 上的写就绪事件；
+
+5、主线程调用 epoll_wait 等待socket 可写；
+
+6、当 socket 可写时，epoll_wait 通知主线程。主线程将socket 可写事件放入请求队列；
+
+7、睡眠在请求队列上的某个工作线程被唤醒，它往 socket 上写入服务器处理客户请求的结果。
+
+![image-20200502082157458](https://i.loli.net/2020/05/02/UPsewREpYHOimFz.png)
