--- a/source/_posts/2020-04-26-C++输入输出.md
+++ b/source/_posts/2020-04-26-C++输入输出.md
@@ -354,7 +354,7 @@ void SplitString(const string &s, vector<string> &v, const string &c)
         v.push_back(s.substr(pos1));
 }
 ```
- 
+
 
 ## 对输入的字符串进行排序后输出
 
@@ -409,3 +409,84 @@ int main()
 }
 ```
 
+# C语言
+
+## strcmp
+
+`#include <string.h>`
+
+`int strcmp(const char *s1, const char *s2);`
+
+**功能:** 用来比较两个字符串
+
+**参数：** s1、s2为两个进行比较的字符串
+
+**返回值:** 若s1、s2字符串相等，则返回零；若s1大于s2，则返回大于零的数；否则，则返回小于零的数。
+
+**说明：** strcmp()函数是根据ACSII码的值来比较两个字符串的；strcmp()函数首先将s1字符串的第一个字符值减去s2第一个字符，若差值为零则继续比较下去；若差值不为零，则返回差值。
+直到出现不同的字符或遇'\0'为止。
+
+### 字符串截取
+
+strncpy函数是拷贝N个字符到另一个字符数组中的库函数
+
+```c
+char dest[4] = {0};
+char src[] = "123456789";
+strncpy(dest, src+3, 3);
+puts(dest);
+---
+456
+```
+
+## C++ string 成员函数 length() size() 和 strlen() 的区别
+
+1、sizeof()是运算符，在编译期间就计算好了，所以对于字符串来说会统计到‘\0’的个数。（这都是早期落后的C故意设计的--字符串后面加一个\0，之后先进的length等函数都不用统计\0的个数了）
+
+
+
+2、size()、length()是c++中string的类的方法，只有string类的对象才可以用该方法，而字符串数组不可用，size()是由于string 毕竟也是一个容器，容器会为了统一都有一个size()函数，size()与length()完全等同，遇到空字符不会被截断，可以返回字符串真实长度
+
+
+
+3、而strlen、strcpy等源于C语言的字符串处理函数库，需要include<string.h>,同时也只有字符串数组才可以用，
+strlen()遇到空字符会截断，从而无法返回字符串真实长度
+strlen同样也可以用于C++的string。但是需要用c_str()将C++ string转换为char*类型。
+
+> The length of a C string is determined by the terminating null-character: A *C string* is as long as the number of characters between the beginning of the string and the terminating null character (without including the terminating null character itself).
+>
+> This should not be confused with the size of the array that holds the string. For example:
+>
+> ```c
+> char mystr[100]="test string";
+> ```
+>
+> defines an array of characters with a size of 100 `char`s, but the C string with which *mystr* has been initialized has a length of only 11 characters. Therefore, while `sizeof(mystr)` evaluates to `100`, `strlen(mystr)` returns `11`.
+>
+> -----
+>
+> ```c
+> char str[] = "Hello\0";
+> ```
+>
+> `sizeof str` is 7 - five bytes for the "Hello" text, plus the explicit NUL terminator, plus the implicit NUL terminator.
+>
+> `strlen(str)` is 5 - the five "Hello" bytes only.
+>
+> The key here is that the implicit nul terminator is *always* added - even if the string literal just happens to end with `\0`. Of course, `strlen` just stops at the first `\0` - it can't tell the difference.
+
+## strlen(“aaa.txt\n”)长度为8，它只会碰到\0(十进制0)截断，空格（十进制32）换行符\n（十进制10）不会进行截断，而且最后的\0不会计入长度。
+
+## C语言中return和exit的区别
+
+exit用于结束进程，返回的状态码是给操作系统使用或父进程使用的。return是堆栈返回，返回的值是给主调函数用的。主线程结束前会默认调用exit结束进程。
+
+exit函数运行时首先会执行由atexit()函数登记的函数，然后会做一些自身的清理工作，同时刷新所有输出流、关闭所有打开的流并且关闭通过标准I/O函数 tmpfile()创建的临时文件。exit是结束一个进程，它将删除进程使用的内存空间，同时把错误信息返回父进程,而return是返回函数值并退出函数。
+
+main函数结束时也会隐式地调用exit函数。
+
+![image-20200505204223719](https://i.loli.net/2020/05/05/94mlEatvNTnHDGp.png)
+
+# linux下用inode删除文件
+
+find ./ -inum 401785 -exec rm -i {} \;
